# servermonitor

./: .gitignore  CMakeLists.txt  README.md
config/: CMakeLists.txt  config.xml  serverMonitor.cfg
src/: CMakeLists.txt  appobserver.cpp  appobserver.h  config.h  config.h.in  constants.h  cpuobserver.cpp  cpuobserver.h  cpuwatch.cpp  cpuwatch.h  globalutils.cpp  globalutils.h  logger.cpp  logger.h  mailer.cpp  mailer.h  main.cpp  main.cpp.autosave  memoryobserver.cpp  memoryobserver.h  memorywatch.cpp  memorywatch.h  monitorworker.cpp  monitorworker.cpp.autosave  monitorworker.h  observer.cpp  observer.h  procobserver.cpp  procobserver.h  procwatch.cpp  procwatch.h  smconfig.cpp  smconfig.h  sysvapp.cpp  sysvapp.h
src/config/: config.xml
